# tp-project-cpp

./: .gitignore  DictHandler.hpp  FileManager.cpp  FileManager.hpp  README.md  dataStructs.hpp  main.cpp  token.cpp
uburu/: CMakeLists.txt  DictHandler.cpp  DictHandler.hpp  dataStructs.cpp  file_reader.cpp  file_reader.h  index_file_parser.cpp  index_file_parser.h  main.cpp  text_comparator.cpp  text_comparator.h  word_vector.cpp  word_vector.h  word_vector_table.cpp  word_vector_table.h
uburu/DictHandler/: DictHandler.cpp  DictHandler.hpp  Model.cpp  Model.hpp
uburu/FileManager/: ioDict.cpp  ioDict.hpp  ioMark.cpp  ioMark.hpp  ioText.cpp  ioText.hpp
uburu/Markup/: Markup.cpp  Markup.hpp
uburu/Tokenizer/: Tokenizer.cpp  Tokenizer.hpp
